--- a/app/src/main/res/layout/activity_video.xml
+++ b/app/src/main/res/layout/activity_video.xml
@@ -18,4 +18,10 @@
         android:layout_height="wrap_content"
         android:text="@string/btnvideo" />
 
+    <Button
+        android:id="@+id/btncompartir"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/btncompartir" />
+
 </LinearLayout>
