--- a/app/src/main/res/layout/activity_video.xml
+++ b/app/src/main/res/layout/activity_video.xml
@@ -24,4 +24,10 @@
         android:layout_height="wrap_content"
         android:text="@string/btncompartir" />
 
+    <Button
+        android:id="@+id/btnguardar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/btnguardar" />
+
 </LinearLayout>
