--- a/app/src/main/res/layout/activity_foto.xml
+++ b/app/src/main/res/layout/activity_foto.xml
@@ -19,4 +19,10 @@
         android:layout_height="wrap_content"
         android:text="@string/TomarFoto" />
 
+    <Button
+        android:id="@+id/btncompartirfoto"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/btncompartirfoto" />
+
 </LinearLayout>
